--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,29 +57,6 @@ jobs:
       - name: Run all tests
         run: make test
 
-  build-and-release:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Build Docker image
-        run: make docker
-
-      - name: Push Docker image to GitHub Container Registry
-        env:
-          IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
-        run: |
-          docker tag $(DOCKER_REPO):$(DOCKER_TAG) $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:latest
-
   semantic-release:
     runs-on: ubuntu-latest
     needs: build-and-release
@@ -116,3 +93,31 @@ jobs:
           release_name: Release ${{ steps.semantic-release.outputs.nextRelease.version }}
           draft: false
           prerelease: false
+
+
+  build-and-release:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build Docker image
+        run: make docker
+
+      - name: Push Docker image to GitHub Container Registry
+        env:
+          IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+          IMAGE_TAG: ${{ steps.semantic-release.outputs.nextRelease.version }}
+        run: |
+          docker tag $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$IMAGE_TAG
+
+  
