--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,6 @@ jobs:
 
   semantic-release:
     runs-on: ubuntu-latest
-    needs: build-and-release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -97,7 +96,9 @@ jobs:
 
   build-and-release:
     runs-on: ubuntu-latest
-    needs: test
+    needs: 
+      - test
+      - semantic-release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
